--- a/ebmRadio-ios/Base.lproj/Main.storyboard
+++ b/ebmRadio-ios/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ooW-yS-bak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -8,75 +8,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Stations View Controller-->
-        <scene sceneID="G4P-9F-k4A">
-            <objects>
-                <viewController id="CP5-wr-sXM" customClass="StationsViewController" customModule="ebmRadio_ios" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y51-zm-rhD"/>
-                        <viewControllerLayoutGuide type="bottom" id="R8i-ay-Cxk"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="A1x-Iq-3zy">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ofO-Xp-e8m">
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nqa-Sg-Lz3">
-                                    <size key="itemSize" width="166" height="166"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StationCollectionViewCell" id="ydp-Ig-5Jy" customClass="StationCollectionViewCell" customModule="ebmRadio_ios" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4VW-gy-PzQ"/>
-                                            </subviews>
-                                        </view>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="4VW-gy-PzQ" secondAttribute="bottom" id="9L3-X8-j1H"/>
-                                            <constraint firstItem="4VW-gy-PzQ" firstAttribute="leading" secondItem="ydp-Ig-5Jy" secondAttribute="leading" id="9MC-Px-oIR"/>
-                                            <constraint firstItem="4VW-gy-PzQ" firstAttribute="centerX" secondItem="ydp-Ig-5Jy" secondAttribute="centerX" id="Vqv-jF-89d"/>
-                                            <constraint firstItem="4VW-gy-PzQ" firstAttribute="centerY" secondItem="ydp-Ig-5Jy" secondAttribute="centerY" id="cbu-aD-2oh"/>
-                                            <constraint firstItem="4VW-gy-PzQ" firstAttribute="top" secondItem="ydp-Ig-5Jy" secondAttribute="top" id="iIe-wD-HpL"/>
-                                            <constraint firstAttribute="trailing" secondItem="4VW-gy-PzQ" secondAttribute="trailing" id="ycD-He-dM5"/>
-                                        </constraints>
-                                        <connections>
-                                            <outlet property="stationCover" destination="4VW-gy-PzQ" id="5sI-fT-KO0"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="CP5-wr-sXM" id="D1U-RU-ILL"/>
-                                    <outlet property="delegate" destination="CP5-wr-sXM" id="t30-dL-be5"/>
-                                </connections>
-                            </collectionView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="ofO-Xp-e8m" firstAttribute="leading" secondItem="A1x-Iq-3zy" secondAttribute="leading" id="At8-Cr-PWo"/>
-                            <constraint firstItem="ofO-Xp-e8m" firstAttribute="top" secondItem="y51-zm-rhD" secondAttribute="bottom" id="Jxx-vK-k9q"/>
-                            <constraint firstItem="R8i-ay-Cxk" firstAttribute="top" secondItem="ofO-Xp-e8m" secondAttribute="bottom" id="X6E-u1-ted"/>
-                            <constraint firstAttribute="trailing" secondItem="ofO-Xp-e8m" secondAttribute="trailing" id="iJ6-Ti-dtL"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="MIx-D1-itI"/>
-                    <connections>
-                        <outlet property="collectionView" destination="ofO-Xp-e8m" id="7ej-gJ-1QA"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="fromStationsToPlayer" id="uA1-Dd-r9f"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="J36-5a-cPt" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="338.39999999999998" y="273.91304347826087"/>
-        </scene>
         <!--Player View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -86,7 +17,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nA4-eX-Aax">
@@ -126,15 +57,15 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnJ-fq-8kZ">
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="DnJ-fq-8kZ" secondAttribute="height" multiplier="26:27" id="kes-80-F8F"/>
-                                    <constraint firstAttribute="height" constant="50" id="uYT-DZ-q7p"/>
+                                    <constraint firstAttribute="height" constant="50" id="uYT-DZ-q7p">
+                                        <variation key="heightClass=compact-widthClass=compact" constant="25"/>
+                                    </constraint>
                                 </constraints>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button" image="EBM"/>
                                 <connections>
                                     <action selector="logoButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4nU-V1-w3V"/>
-                                    <segue destination="JtL-ht-3bB" kind="popoverPresentation" identifier="fromPlayerToStationInfo" popoverAnchorView="DnJ-fq-8kZ" id="26I-dy-uZR">
-                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                    </segue>
+                                    <segue destination="JtL-ht-3bB" kind="presentation" identifier="fromPlayerToStationInfo" id="26I-dy-uZR"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -206,21 +137,13 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2sn-H9-zlm">
-                                <state key="normal">
-                                    <attributedString key="attributedTitle">
-                                        <fragment content="http://station-url.com">
-                                            <attributes>
-                                                <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <font key="NSFont" metaFont="system" size="20"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                                <integer key="NSUnderline" value="1"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sn-H9-zlm">
+                                <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="20"/>
+                                <state key="normal" title="http://station-url.com">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="stationUrlButtonPressed:" destination="Msi-5t-NWh" eventType="touchUpInside" id="lV7-yS-3Ql"/>
+                                    <action selector="stationButtonPressed:" destination="Msi-5t-NWh" eventType="touchUpInside" id="4vP-Gk-xRJ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cXH-4C-oMS">
@@ -237,6 +160,9 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <action selector="githubButtonPressed:" destination="Msi-5t-NWh" eventType="touchUpInside" id="8jZ-ah-af5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -282,7 +208,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JtL-ht-3bB" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="x6z-dU-dgE">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="x6z-dU-dgE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -295,29 +221,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZ3-HB-MoV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2184.8000000000002" y="273.91304347826087"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="kRc-fj-ccr">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ooW-yS-bak" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="46I-EU-SFz">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </textAttributes>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="CP5-wr-sXM" kind="relationship" relationship="rootViewController" id="KJJ-jQ-Ax5"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4PY-GG-PQI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-602.39999999999998" y="273.91304347826087"/>
         </scene>
     </scenes>
     <resources>
